--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 		overflow-y: scroll;
 		position: absolute;
 		left: 50%;
-		top: 1px;
-		width: 48%;
-		height: 98%;
+		top: 130px;
+		width: 49%;
+		height:80%;
 		background: #fff;
 		color: #000;
 		font-family: Helvetica;
@@ -58,7 +58,7 @@
 		overflow-y: scroll;
 		position: absolute;
 		left: 0%;
-		top: 250px;
+		top: 130px;
 		width: 50%;
 		height: 25px;
 		background: #fff;
@@ -72,24 +72,24 @@
 	}
 	/*class description*/
 	.ditherTxt{
-		overflow-y: scroll;
 		position: absolute;
+		text-align: center;
 		left: 0px;
 		top: 1px;
-		width: 50%;
-		height: 250px;
+		width: 100%;
+		height: 125px;
 		background: #fff;
 		color: #000;
 		font-family: ditherFont;
 		font-size: 100px;
 		border: solid 3px #000;
 		z-index: 1;
-		padding: 5px 5px 3px 5px;
+		/*padding: 5px 5px 3px 5px;8*/
 	}
 	.speech{
 		position: absolute;
 		left: 0px;
-		top: 285px;
+		top: 160px;
 		width: 50%;
 		height: auto;
 		background: #fff;
@@ -103,11 +103,10 @@
 </style>
 </head>
 <body>
-	<div class="ditherTxt">my amazing dither font</div>
+	<div class="ditherTxt">Hello Dither Font</div>
 	<div class="useChrome" >USE CHROME AS BROWSER TO WRITE WITH THE SPEECH RECOGNITION API</div>
 	<div class="speech" id="myspeech">SPEAK LOUD</div>
 	<div class="description">
-		<h1>HELLO DITHER FONT</h1>
 		<img src="https://user-images.githubusercontent.com/17408277/32441002-dcba07ba-c2f5-11e7-85a9-105228cfc045.png" width="100%" height="auto"><br>
 		A <a href="https://processing.org">processing</a> tool to develop dithered fonts, based on <a href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro</a>.<br><br>
 		<h3>DOWNLOAD/FORK/PUSH/COMMENTS <a href="https://github.com/Yyyyaaaannnnoooo/DitherFont_v_01">HERE</a></h3>
