--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 		src: url(data/DitherFont_001/bin/DitherFont_001.woff);
 	}
 	@font-face{
-
 		font-family: mono;
 		src: url(data/SourceCodePro-Bold.otf.woff);
 	}
+	@font-face{
+		font-family: monoThin;
+		src: url(data/SourceCodePro-Regular.otf.woff);
+	}
+	
 	div{
 		font-family: ditherFont;
 	}
@@ -33,9 +37,9 @@
 		margin:auto;
 	}	
 	code{
-		font-family: mono;
-		color: #fff;
-		background: #000;
+		font-family: monoThin;
+		color: #000;
+		background: #ddd;
 	}
 	/*class description*/
 	.description{
